--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,8 @@ header nav, .navbar, .nav-container {
   object-fit: cover;
   border-radius: 50%;
   border: 3px solid #fff;
-  margin-bottom: 1rem;
+  margin: 0 auto 1rem auto;
+  display: block;
 }
 
 section {
@@ -227,6 +228,18 @@ footer {
   font-size: 1.25rem;
 }
 .bio-zh { display: none; }
+
+.content-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.dog-description {
+  text-align: center;
+  width: 100%;
+}
 
 @media (max-width: 1100px) {
   .hero-content { 
