--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,14 @@ footer {
   margin-top: 1rem;
 }
 
+.column.dog .content-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
 @media (max-width: 1100px) {
   .hero-content { 
     flex-direction: column; 
